add up/down div's

--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
 </head>
 <body>
 <ul>
-    <li>
+    <li class="red">
         <div class="red">
             <button class="up">Up</button>
             <button class="down">Down</button>
         </div>
     </li>
-    <li>
+    <li class="green">
         <div class="green">
             <button class="up">Up</button>
             <button class="down">Down</button>
         </div>
     </li>
-    <li>
+    <li class="blue">
         <div class="blue">
             <button class="up">Up</button>
             <button class="down">Down</button>
         </div>
     </li>
-    <li>
+    <li class="grey">
         <div class="grey">
             <button class="up">Up</button>
             <button class="down">Down</button>
         </div>
     </li>
-    <li>
+    <li class="yellow">
         <div class="yellow">
             <button class="up">Up</button>
             <button class="down">Down</button>
